# freetype2-testing

./: .gitignore  .gitmodules  .travis.yml  README.md
fuzzing/: CMakeLists.txt  README.md
fuzzing/corpora/cidtype1-render-ftengine/oss-fuzz/: README.md
fuzzing/corpora/cidtype1/bungeman/: HangingS_hex.cid
fuzzing/corpora/legacy/oss-fuzz/: README.md
fuzzing/corpora/pfr/: dummy.pfr
fuzzing/corpora/truetype/bungeman/: README.md
fuzzing/corpora/type1-render-tar/bungeman/: README.md
fuzzing/driver/: CMakeLists.txt  driver.cc
fuzzing/libfuzzer/: CMakeLists.txt
fuzzing/scripts/: README.md  build-freetype.sh  build-fuzzers.sh  build-glog.sh  build-libarchive.sh  build-oss-fuzz.sh  build-targets.sh  cleanup.sh  custom-build.sh  generate_cache_seed.py  prepare-oss-fuzz.sh  run-oss-fuzz-mock.sh  run-oss-fuzz.sh  run-travis-ci.sh
fuzzing/scripts/travis-ci/: regression-suite.sh
fuzzing/settings/freetype2/: ftoption.patch
fuzzing/settings/oss-fuzz/: cache.options  pfr.dict  pfr.options
fuzzing/src/: CMakeLists.txt  README.md
fuzzing/src/driver/: CMakeLists.txt  DriverInternals.cpp  DriverInternals.h  README.md  driver.cpp
fuzzing/src/fuzzers/: CMakeLists.txt  README.md  cff-render.cpp  cff.cpp  cidtype1-render.cpp  cidtype1.cpp  glyphs-outlines.cpp  template.cpp  truetype-render.cpp  type1-render-tar.cpp  type1-render.cpp  type1-tar.cpp  type1.cpp  type42-render.cpp  type42.cpp  windowsfnt-render.cpp  windowsfnt.cpp
fuzzing/src/iterators/: faceloaditerator.cpp  faceloaditerator.h  faceprepiterator-bitmaps.cpp  faceprepiterator-bitmaps.h  faceprepiterator-multiplemasters.cpp  faceprepiterator-multiplemasters.h  faceprepiterator-outlines.cpp  faceprepiterator-outlines.h  faceprepiterator.cpp  faceprepiterator.h  glyphloaditerator-naive.cpp  glyphloaditerator-naive.h  glyphloaditerator.cpp  glyphloaditerator.h  glyphrenderiterator-allmodes.cpp  glyphrenderiterator-allmodes.h  glyphrenderiterator.cpp  glyphrenderiterator.h
fuzzing/src/legacy/: README.md
fuzzing/src/libfuzzer/: CMakeLists.txt  cff.cpp  cidtype1.cpp  truetype.cpp
fuzzing/src/targets/: CMakeLists.txt  CacheFuzzTarget.cpp  CacheFuzzTarget.h  FaceFuzzTarget.cpp  FaceFuzzTarget.h  FuzzTarget.cpp  FuzzTarget.h  PropertiesFuzzTarget.cpp  PropertiesFuzzTarget.h  README.md  base.cpp  base.h
fuzzing/src/targets/font-drivers/: CMakeLists.txt  README.md  base.cpp  base.h  bdf-render.cpp  bdf-render.h  bdf.cpp  bdf.h  cff-ftengine.cpp  cff-ftengine.h  cff-render-ftengine.cpp  cff-render-ftengine.h  cff-render.cpp  cff-render.h  cff.cpp  cff.h  cidtype1-ftengine.cpp  cidtype1-ftengine.h  cidtype1-render-ftengine.cpp  cidtype1-render-ftengine.h  cidtype1-render.cpp  cidtype1-render.h  cidtype1.cpp  cidtype1.h  colrv1.cpp  colrv1.h  pcf-render.cpp  pcf-render.h  pcf.cpp  pcf.h  pfr.cpp  pfr.h  truetype-render-i35.cpp  truetype-render-i35.h  truetype-render-i38.cpp  truetype-render-i38.h  truetype-render.cpp  truetype-render.h  truetype.cpp  truetype.h  (+24 more)
fuzzing/src/targets/glyphs/: bitmaps-pcf.cpp  bitmaps-pcf.h  bitmaps.cpp  bitmaps.h  outlines.cpp  outlines.h
fuzzing/src/targets/support/: Bzip2FuzzTarget.h  GzipFuzzTarget.cpp  GzipFuzzTarget.h  LzwFuzzTarget.h
fuzzing/src/utils/: FreeTypeStream.h  faceloader.cpp  faceloader.h  logging.h  noncopyable.h  tarreader.cpp  tarreader.h  utils.cpp  utils.h
fuzzing/src/visitors/: facevisitor-autohinter.cpp  facevisitor-autohinter.h  facevisitor-bdf.cpp  facevisitor-bdf.h  facevisitor-charcodes.cpp  facevisitor-charcodes.h  facevisitor-cid.cpp  facevisitor-cid.h  facevisitor-colrv1.cpp  facevisitor-colrv1.h  facevisitor-gasp.cpp  facevisitor-gasp.h  facevisitor-kerning.cpp  facevisitor-kerning.h  facevisitor-loadglyphs-bitmaps.cpp  facevisitor-loadglyphs-bitmaps.h  facevisitor-loadglyphs-outlines.cpp  facevisitor-loadglyphs-outlines.h  facevisitor-loadglyphs.cpp  facevisitor-loadglyphs.h  facevisitor-multiplemasters.cpp  facevisitor-multiplemasters.h  facevisitor-pfr.cpp  facevisitor-pfr.h  facevisitor-properties.cpp  facevisitor-properties.h  facevisitor-renderglyphs.cpp  facevisitor-renderglyphs.h  facevisitor-sfntnames.cpp  facevisitor-sfntnames.h  facevisitor-subglyphs.cpp  facevisitor-subglyphs.h  facevisitor-trackkerning.cpp  facevisitor-trackkerning.h  facevisitor-truetypepatents.cpp  facevisitor-truetypepatents.h  facevisitor-truetypetables.cpp  facevisitor-truetypetables.h  facevisitor-type1tables.cpp  facevisitor-type1tables.h  (+14 more)
